force-app/main/default/objects/CLI_Configuration__mdt/CLI_Configuration__mdt.object-meta.xml
<CustomObject>
    <description>Configuration settings for the Credit Limit Increase auto-approval process</description>
    <label>CLI Configuration</label>
    <pluralLabel>CLI Configurations</pluralLabel>
</CustomObject>