force-app/main/default/objects/CLI_Configuration__mdt/fields/Credit_Report_Max_Age_Days__c.field-meta.xml
<CustomField>
    <fullName>Credit_Report_Max_Age_Days__c</fullName>
    <defaultValue>365</defaultValue>
    <description>Maximum age of credit report in days (365 days default)</description>
    <inlineHelpText>The maximum age in days of a credit report that can be used for auto-approval</inlineHelpText>
    <label>Credit Report Max Age Days</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>