force-app/main/default/objects/CLI_Configuration__mdt/fields/Increase_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>Increase_Multiplier__c</fullName>
    <defaultValue>1.2</defaultValue>
    <label>Increase Multiplier</label>
    <precision>5</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>