force-app/main/default/objects/CLI_Configuration__mdt/fields/Max_Cumulative_Increase__c.field-meta.xml
<CustomField>
    <fullName>Max_Cumulative_Increase__c</fullName>
    <defaultValue>25000</defaultValue>
    <description>Maximum cumulative increase threshold ($25k default)</description>
    <inlineHelpText>The maximum cumulative amount that can be auto-approved across all credit limit increase requests for an account</inlineHelpText>
    <label>Max Cumulative Increase</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>